Update 1 - Copia (2).html

--- a/index_arquivos/FOTOPORNO/1 - Copia (2).html
+++ b/index_arquivos/FOTOPORNO/1 - Copia (2).html
@@ -66,219 +66,219 @@ document.getElementById('piscando').style.opacity = '0';
 <!---------------------------------------------------------------------------------->
 <a href="
 LINK⚫
-" target="_blank"><img src="
+" target="_blank"><img src="IMAGENS/
 IMAGEM⚫
-" width="280" height="280"></a>
+.jpg" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
 <a href="
 LINK⚫
-" target="_blank"><img src="
+" target="_blank"><img src="IMAGENS/
 IMAGEM⚫
-" width="280" height="280"></a>
+.jpg" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
 <a href="
 LINK⚫
-" target="_blank"><img src="
+" target="_blank"><img src="IMAGENS/
 IMAGEM⚫
-" width="280" height="280"></a>
+.jpg" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
 <a href="
 LINK⚫
-" target="_blank"><img src="
+" target="_blank"><img src="IMAGENS/
 IMAGEM⚫
-" width="280" height="280"></a>
+.jpg" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
 <a href="
 LINK⚫
-" target="_blank"><img src="
+" target="_blank"><img src="IMAGENS/
 IMAGEM⚫
-" width="280" height="280"></a>
+.jpg" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
 <a href="
 LINK⚫
-" target="_blank"><img src="
+" target="_blank"><img src="IMAGENS/
 IMAGEM⚫
-" width="280" height="280"></a>
+.jpg" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
 <a href="
 LINK⚫
-" target="_blank"><img src="
+" target="_blank"><img src="IMAGENS/
 IMAGEM⚫
-" width="280" height="280"></a>
+.jpg" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
 <a href="
 LINK⚫
-" target="_blank"><img src="
+" target="_blank"><img src="IMAGENS/
 IMAGEM⚫
-" width="280" height="280"></a>
+.jpg" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
 <a href="
 LINK⚫
-" target="_blank"><img src="
+" target="_blank"><img src="IMAGENS/
 IMAGEM⚫
-" width="280" height="280"></a>
+.jpg" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
 <a href="
 LINK⚫
-" target="_blank"><img src="
+" target="_blank"><img src="IMAGENS/
 IMAGEM⚫
-" width="280" height="280"></a>
+.jpg" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
 <a href="
 LINK⚫
-" target="_blank"><img src="
+" target="_blank"><img src="IMAGENS/
 IMAGEM⚫
-" width="280" height="280"></a>
+.jpg" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
 <a href="
 LINK⚫
-" target="_blank"><img src="
+" target="_blank"><img src="IMAGENS/
 IMAGEM⚫
-" width="280" height="280"></a>
+.jpg" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
 <a href="
 LINK⚫
-" target="_blank"><img src="
+" target="_blank"><img src="IMAGENS/
 IMAGEM⚫
-" width="280" height="280"></a>
+.jpg" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
 <a href="
 LINK⚫
-" target="_blank"><img src="
+" target="_blank"><img src="IMAGENS/
 IMAGEM⚫
-" width="280" height="280"></a>
+.jpg" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
 <a href="
 LINK⚫
-" target="_blank"><img src="
+" target="_blank"><img src="IMAGENS/
 IMAGEM⚫
-" width="280" height="280"></a>
+.jpg" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
 <a href="
 LINK⚫
-" target="_blank"><img src="
+" target="_blank"><img src="IMAGENS/
 IMAGEM⚫
-" width="280" height="280"></a>
+.jpg" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
 <a href="
 LINK⚫
-" target="_blank"><img src="
+" target="_blank"><img src="IMAGENS/
 IMAGEM⚫
-" width="280" height="280"></a>
+.jpg" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
 <a href="
 LINK⚫
-" target="_blank"><img src="
+" target="_blank"><img src="IMAGENS/
 IMAGEM⚫
-" width="280" height="280"></a>
+.jpg" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
 <a href="
 LINK⚫
-" target="_blank"><img src="
+" target="_blank"><img src="IMAGENS/
 IMAGEM⚫
-" width="280" height="280"></a>
+.jpg" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
 <a href="
 LINK⚫
-" target="_blank"><img src="
+" target="_blank"><img src="IMAGENS/
 IMAGEM⚫
-" width="280" height="280"></a>
+.jpg" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
 <a href="
 LINK⚫
-" target="_blank"><img src="
+" target="_blank"><img src="IMAGENS/
 IMAGEM⚫
-" width="280" height="280"></a>
+.jpg" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
 <a href="
 LINK⚫
-" target="_blank"><img src="
+" target="_blank"><img src="IMAGENS/
 IMAGEM⚫
-" width="280" height="280"></a>
+.jpg" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
 <a href="
 LINK⚫
-" target="_blank"><img src="
+" target="_blank"><img src="IMAGENS/
 IMAGEM⚫
-" width="280" height="280"></a>
+.jpg" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
 <a href="
 LINK⚫
-" target="_blank"><img src="
+" target="_blank"><img src="IMAGENS/
 IMAGEM⚫
-" width="280" height="280"></a>
+.jpg" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
 <a href="
 LINK⚫
-" target="_blank"><img src="
+" target="_blank"><img src="IMAGENS/
 IMAGEM⚫
-" width="280" height="280"></a>
+.jpg" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
 <a href="
 LINK⚫
-" target="_blank"><img src="
+" target="_blank"><img src="IMAGENS/
 IMAGEM⚫
-" width="280" height="280"></a>
+.jpg" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
 <a href="
 LINK⚫
-" target="_blank"><img src="
+" target="_blank"><img src="IMAGENS/
 IMAGEM⚫
-" width="280" height="280"></a>
+.jpg" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
 <a href="
 LINK⚫
-" target="_blank"><img src="
+" target="_blank"><img src="IMAGENS/
 IMAGEM⚫
-" width="280" height="280"></a>
+.jpg" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
 <a href="
 LINK⚫
-" target="_blank"><img src="
+" target="_blank"><img src="IMAGENS/
 IMAGEM⚫
-" width="280" height="280"></a>
+.jpg" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
 <a href="
 LINK⚫
-" target="_blank"><img src="
+" target="_blank"><img src="IMAGENS/
 IMAGEM⚫
-" width="280" height="280"></a>
+.jpg" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
 <a href="
 LINK⚫
-" target="_blank"><img src="
+" target="_blank"><img src="IMAGENS/
 IMAGEM⚫
-" width="280" height="280"></a>
+.jpg" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
 <a href="
 LINK⚫
-" target="_blank"><img src="
+" target="_blank"><img src="IMAGENS/
 IMAGEM⚫
-" width="280" height="280"></a>
+.jpg" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
 <a href="
 LINK⚫
-" target="_blank"><img src="
+" target="_blank"><img src="IMAGENS/
 IMAGEM⚫
-" width="280" height="280"></a>
+.jpg" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
 <a href="
 LINK⚫
-" target="_blank"><img src="
+" target="_blank"><img src="IMAGENS/
 IMAGEM⚫
-" width="280" height="280"></a>
+.jpg" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
 <a href="
 LINK⚫
-" target="_blank"><img src="
+" target="_blank"><img src="IMAGENS/
 IMAGEM⚫
-" width="280" height="280"></a>
+.jpg" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
 <a href="
 LINK⚫
-" target="_blank"><img src="
+" target="_blank"><img src="IMAGENS/
 IMAGEM⚫
-" width="280" height="280"></a>
+.jpg" width="280" height="280"></a>
 
 
 
