Update 1 - Copia.html

--- a/index_arquivos/FOTOPORNO/1 - Copia.html
+++ b/index_arquivos/FOTOPORNO/1 - Copia.html
@@ -113,21 +113,21 @@ http://www.mypornpics.com/x/?t=1140994
 " width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
 <a href="
-LINK⚫
+http://www.mypornpics.com/x/?t=1349568
 " target="_blank"><img src="IMAGENS/
-IMAGEM⚫
+659a549ae_src
 .jpg" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
 <a href="
-LINK⚫
+http://www.mypornpics.com/x/?t=610419
 " target="_blank"><img src="IMAGENS/
-IMAGEM⚫
+21a32f732_src
 .jpg" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
 <a href="
-LINK⚫
+http://www.mypornpics.com/x/?t=638177
 " target="_blank"><img src="IMAGENS/
-IMAGEM⚫
+d07d9ae90_src
 .jpg" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
 <a href="
