Update 1 - Copia.html

--- a/index_arquivos/FOTOPORNO/1 - Copia.html
+++ b/index_arquivos/FOTOPORNO/1 - Copia.html
@@ -131,45 +131,45 @@ d07d9ae90_src
 .jpg" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
 <a href="
-LINK⚫
+http://www.mypornpics.com/x/?t=534547
 " target="_blank"><img src="IMAGENS/
-IMAGEM⚫
+9bee7ee04_src
 .jpg" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
 <a href="
-LINK⚫
+http://www.mypornpics.com/x/?t=1186771
 " target="_blank"><img src="IMAGENS/
-IMAGEM⚫
+66c84357b_src
 .jpg" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
 <a href="
-LINK⚫
+http://www.mypornpics.com/x/?t=944632
 " target="_blank"><img src="IMAGENS/
-IMAGEM⚫
+382f4db87_src
 .jpg" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
 <a href="
-LINK⚫
+http://www.eroticbabepics.com/erotic-beauty/maxa-11857/
 " target="_blank"><img src="IMAGENS/
-IMAGEM⚫
+pic-03
 .jpg" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
 <a href="
-LINK⚫
+http://www.eroticbabepics.com/erotic-beauty/darsi-1275/
 " target="_blank"><img src="IMAGENS/
-IMAGEM⚫
+xxx-pic-13
 .jpg" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
 <a href="
-LINK⚫
+http://www.eroticbabepics.com/erotic-beauty/boleyn-13589/
 " target="_blank"><img src="IMAGENS/
-IMAGEM⚫
+sexxxy-02
 .jpg" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
 <a href="
-LINK⚫
+http://www.fresh-babes.com/pictures/mpl-studios/mpl-studios-1140/
 " target="_blank"><img src="IMAGENS/
-IMAGEM⚫
+picture-5
 .jpg" width="280" height="280"></a>
 <!---------------------------------------------------------------------------------->
 <a href="
