--- a/AVISO.html
+++ b/AVISO.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+﻿-<!DOCTYPE html>
 <html>
 <title>W3.CSS</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,14 +8,21 @@
 <h2>AVISO</h2>
 <p>Leia com atenção:</p>
 
+<HR/>
+
 <div class="w3-panel w3-blue">
   <h3>INFORMAÇÃO</h3>
   <p>Estamos em manutenção para melhor lhe atender.</p>
 </div>
 
 <div class="w3-panel w3-pale-blue w3-border">
-  <h3><font color="red">Atenção</h3>
-  <p>Contém conteúdo para adultos, proibido para menores de 18 anos.</font></p>
+  <h2><b><font color="red">ATENÇÃO</h2>
+  <p>Contém conteúdo para adultos, proibido para menores de 18 anos.</font></b></p>
+</div>
+
+<div class="w3-panel w3-green">
+  <h3>ULTIMA ATUALIZAÇÃO EM:</h3>
+  <p>15:46 27/10/2023.</p>
 </div>
 
 
