--- a/AVISO.html
+++ b/AVISO.html
@@ -9,22 +9,58 @@
 <p>Leia com atenção:</p>
 
 <HR/>
-
+<!------------------------------------------------------------------>
+<!------------------------------------------------------------------>
+<!------------------------------------------------------------------>
 <div class="w3-panel w3-blue">
   <h3>INFORMAÇÃO</h3>
   <p>Estamos em manutenção para melhor lhe atender.</p>
 </div>
-
+<!------------------------------------------------------------------>
 <div class="w3-panel w3-pale-blue w3-border">
   <h2><b><font color="red">ATENÇÃO</h2>
   <p>Contém conteúdo para adultos, proibido para menores de 18 anos.</font></b></p>
 </div>
+<!------------------------------------------------------------------>
+<a href="
+https://forms.gle/HYTAQvs2mw5ZzFiV8
+" target="_blank"><div class="w3-panel w3-black w3-border">
+<h2><b><font color="red">Participe da enquete</h2>
+<p>Clique aqui para dizer se você está gostando do site (NOSSO SITE).
+</div></a></font></b></p>
+<H3>OU</H3>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScmAMMrre7pxDq6VQtnXpQh27qqIYfBuOtCUtN7thYLbtkbkw/viewform?embedded=true" width="100%" height="100%" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
 
+<!------------------------------------------------------------------>
 <div class="w3-panel w3-green">
   <h3>ULTIMA ATUALIZAÇÃO EM:</h3>
-  <p>15:46 27/10/2023.</p>
+  <p>10:11 28/10/2023.</p>
 </div>
 
+
+
+<!------------------------------------------------------------------>
+<!------------------------------------
+RESULTADO DA ENQUETE
+https://docs.google.com/forms/d/1wyu10U07toyOQkDFNBYyq_dG2yGCldcB6djJ3zSYJeM/edit#responses
+
+---------------------------------------
+
+<div class="w3-panel w3-pale-blue w3-border"><h2><b><font color="red">
+ATENÇÃO
+</h2><p>
+Contém conteúdo para adultos, proibido para menores de 18 anos.
+</font></b></p></div>
+
+------------------LINK---------------
+<a href="
+LINK
+" target="_blank"><div class="w3-panel w3-black w3-border"><h2><b><font color="red">
+Participe da enquete
+</h2><p>
+NOME (NOSSO SITE).
+</div></a></font></b></p>
+----------------------------------->
 
 </body>
 </html>
