--- a/AVISO.html
+++ b/AVISO.html
@@ -1,4 +1,28 @@
-﻿-<!DOCTYPE html>
+﻿<meta charset="utf-8"><!DOCTYPE html><html lang="pt-br">
+<head><title>NOSSO SITE</title>
+<link rel="sortcut icon" href="https://cdn.icon-icons.com/icons2/2357/PNG/512/office_automation_laptop_computer_icon_143304.png" type="image/gif" />
+<link href="CSS🔴.css" rel="stylesheet">
+<link rel="stylesheet" href="CSS🔴.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="author" content="santos.12164@hotmail.com">
+<meta name="description" content="NOSSO SITE">
+<meta name="keywords" content="NOSSO SITE">
+</head><body><style>
+img {
+    max-width: 100%;
+}
+</style><center><body bgcolor="#CCC"> </body>
+<!--------------------------------
+<font color="#009427">&emsp;
+<!---------------------------------------------------------------------------------->
+<!--##############################################################################-->
+<!--##############################################################################-->
+<!--##############################   INÍCIO MENU  ################################-->
+<!--##############################################################################-->
+<!--##############################################################################-->
+<!---------------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------------->
+<!DOCTYPE html>
 <html>
 <title>W3.CSS</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -22,6 +46,31 @@
   <p>Contém conteúdo para adultos, proibido para menores de 18 anos.</font></b></p>
 </div>
 <!------------------------------------------------------------------>
+<div class="w3-panel w3-green">
+  <h3>ULTIMA ATUALIZAÇÃO EM:</h3>
+  <p>10:11 28/10/2023.</p>
+</div>
+<!------------------------------------------------------------------>
+
+<!------------------------------------------------------------------>
+
+<!------------------------------------------------------------------>
+
+<!------------------------------------------------------------------>
+
+
+
+
+
+
+
+
+
+
+
+<!------------------------------------------------------------------>
+<!---------------------------ENQUETE ULTIMO---------------------------->
+<!------------------------------------------------------------------>
 <a href="
 https://forms.gle/HYTAQvs2mw5ZzFiV8
 " target="_blank"><div class="w3-panel w3-black w3-border">
@@ -32,10 +81,16 @@ https://forms.gle/HYTAQvs2mw5ZzFiV8
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScmAMMrre7pxDq6VQtnXpQh27qqIYfBuOtCUtN7thYLbtkbkw/viewform?embedded=true" width="100%" height="100%" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
 
 <!------------------------------------------------------------------>
-<div class="w3-panel w3-green">
-  <h3>ULTIMA ATUALIZAÇÃO EM:</h3>
-  <p>10:11 28/10/2023.</p>
-</div>
+
+
+
+
+
+
+
+
+
+
 
 
 
