--- a/index.html
+++ b/index.html
@@ -294,11 +294,11 @@ RECEITAS
 <BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="index_arquivos/
-RECEITAS
+COMÉDIAS
 /1 - Copia.html" target="_self"><img src="
 RECEITAS
 " width="280" height="280"></a><BR/>
-RECEITAS
+COMÉDIAS
 <BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="index_arquivos/
