Update 1 - Copia.html

--- a/index_arquivos/COMÉDIAS/1 - Copia.html
+++ b/index_arquivos/COMÉDIAS/1 - Copia.html
@@ -50,19 +50,19 @@ img {
 <!----------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
 <button><a href="
-LINK⚫
+https://www.youtube-nocookie.com/embed/aCw-IEsH4SI
 ?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
-IMAGEM⚫
+https://i.ytimg.com/vi/aCw-IEsH4SI/maxresdefault.jpg
 " width="280" height="280"></a><BR/>
-NOME⚫
+30 MINUTOS DE PIADAS ENGRAÇADAS
 <BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
-LINK⚫
+https://www.youtube-nocookie.com/embed/PE-HaK6gtWs
 ?autoplay=1&mute=1&enablejsapi=1" target="_blank"><img src="
-IMAGEM⚫
+https://i.ytimg.com/vi/PE-HaK6gtWs/maxresdefault.jpg
 " width="280" height="280"></a><BR/>
-NOME⚫
+ANIMATUNES - Piada Tunes - Caipira e advogado
 <BR/></button>
 <!---------------------------------------------------------------------------------->
 <button><a href="
